fix(bd-2jb): address code review findings
- Apply Google Java Format (2-space indent) to all Java files
- Add DuplicateKeyException handler returning 409 Conflict
- Add ConstraintViolationException handler returning 400
- Add @Slf4j logging to GlobalExceptionHandler
- Remove plaintext password mapping from UserMapper
- Change @Builder to @SuperBuilder on BaseDocument + User
- Add @Validated + @Min/@Max on pagination params (max size=100)
- Fix frontend common.ts Prettier formatting